# FedProtoContinual

./: .gitignore  pyproject.toml
src/: __init__.py  main.py  t.py  train_centralized.py
src/client/: Client.py  __init__.py
src/client/plugin/: LwF.py
src/client/plugins/: AlphaGateLossPlugin.py  CompactionLossPlugin.py  GlobalLossPlugin.py  LogPlugin.py  LwF.py  LwFPlugin.py  OrthoLossPlugin.py  __init__.py
src/client/strategies/: NaiveStrategy.py  __init__.py
src/core/: Plugins.py  Strategy.py  __init__.py
src/model/: Models.py
src/model/blocks/: Adapter.py
src/model/layers/: AlphaGate.py  IncrementalClassifier.py  LinearAttention.py  MultiHeadLinearAttention.py  PrototypeClassifier.py  PrototypeMemory.py
src/server/: HybridFedAVG.py  PrototypeAggregator.py  Server.py
src/utils/: data_distribuition.py  load_centralized_data.py  test.py
